// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`runServer should attempt to run server, create transport, connect, and log success message: console 1`] = `
{
  "info": [],
  "log": [
    [
      "PatternFly MCP server running on stdio",
    ],
  ],
  "mcpServer": [
    [
      {
        "name": "@patternfly/patternfly-mcp",
        "version": "0.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [],
}
`;

exports[`runServer should attempt to run server, disable SIGINT handler: console 1`] = `
{
  "info": [],
  "log": [
    [
      "PatternFly MCP server running on stdio",
    ],
  ],
  "mcpServer": [
    [
      {
        "name": "@patternfly/patternfly-mcp",
        "version": "0.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [],
  "registerTool": [],
}
`;

exports[`runServer should attempt to run server, enable SIGINT handler explicitly: console 1`] = `
{
  "info": [],
  "log": [
    [
      "PatternFly MCP server running on stdio",
    ],
  ],
  "mcpServer": [
    [
      {
        "name": "@patternfly/patternfly-mcp",
        "version": "0.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [],
}
`;

exports[`runServer should attempt to run server, register a tool: console 1`] = `
{
  "info": [
    [
      "Registered tool: loremIpsum",
    ],
  ],
  "log": [
    [
      "PatternFly MCP server running on stdio",
    ],
  ],
  "mcpServer": [
    [
      {
        "name": "@patternfly/patternfly-mcp",
        "version": "0.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [
    [
      "loremIpsum",
      {
        "description": "Lorem Ipsum",
        "inputSchema": {},
      },
      [Function],
    ],
  ],
}
`;

exports[`runServer should attempt to run server, register multiple tools: console 1`] = `
{
  "info": [
    [
      "Registered tool: loremIpsum",
    ],
    [
      "Registered tool: dolorSit",
    ],
  ],
  "log": [
    [
      "PatternFly MCP server running on stdio",
    ],
  ],
  "mcpServer": [
    [
      {
        "name": "@patternfly/patternfly-mcp",
        "version": "0.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [
    [
      "loremIpsum",
      {
        "description": "Lorem Ipsum",
        "inputSchema": {},
      },
      [Function],
    ],
    [
      "dolorSit",
      {
        "description": "Dolor Sit",
        "inputSchema": {},
      },
      [Function],
    ],
  ],
}
`;

exports[`runServer should attempt to run server, use custom options: console 1`] = `
{
  "info": [],
  "log": [
    [
      "PatternFly MCP server running on stdio",
    ],
  ],
  "mcpServer": [
    [
      {
        "name": "test-server",
        "version": "1.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [],
}
`;

exports[`runServer should attempt to run server, use default tools: console 1`] = `
{
  "info": [
    [
      "Registered tool: usePatternFlyDocs",
    ],
    [
      "Registered tool: fetchDocs",
    ],
    [
      "Registered tool: componentSchemas",
    ],
    [
      "Registered tool: getAvailableModulesTool",
    ],
    [
      "Registered tool: getComponentSourceCode",
    ],
  ],
  "log": [
    [
      "PatternFly MCP server running on stdio",
    ],
  ],
  "mcpServer": [
    [
      {
        "name": "@patternfly/patternfly-mcp",
        "version": "0.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [
    [
      "usePatternFlyDocs",
      {
        "description": "You must use this tool to answer any questions related to PatternFly components or documentation.

        The description of the tool contains links to .md files or local file paths that the user has made available.

        
            [@patternfly/AboutModal - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/about-modal/about-modal.md)
[@patternfly/AboutModal - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/about-modal/about-modal.md)
[@patternfly/Accordion - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/accordion/accordion.md)
[@patternfly/Accordion - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/accordion/accordion.md)
[@patternfly/ActionList - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/action-list/action-list.md)
[@patternfly/ActionList - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/action-list/action-list.md)
[@patternfly/Alert - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/alert/alert.md)
[@patternfly/Alert - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/alert/alert.md)
[@patternfly/ApplicationLauncher - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/application-launcher/application-launcher.md)
[@patternfly/ApplicationLauncher - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/application-launcher/application-launcher.md)
[@patternfly/Avatar - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/avatar/avatar.md)
[@patternfly/Avatar - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/avatar/avatar.md)
[@patternfly/BackToTop - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/back-to-top/back-to-top.md)
[@patternfly/BackToTop - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/back-to-top/back-to-top.md)
[@patternfly/Backdrop - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/backdrop/backdrop.md)
[@patternfly/Backdrop - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/backdrop/backdrop.md)
[@patternfly/BackgroundImage - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/background-image/background-image.md)
[@patternfly/BackgroundImage - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/background-image/background-image.md)
[@patternfly/Badge - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/badge/badge.md)
[@patternfly/Badge - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/badge/badge.md)
[@patternfly/Banner - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/banner/banner.md)
[@patternfly/Banner - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/banner/banner.md)
[@patternfly/Brand - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/brand/brand.md)
[@patternfly/Brand - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/brand/brand.md)
[@patternfly/Breadcrumb - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/breadcrumb/breadcrumb.md)
[@patternfly/Breadcrumb - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/breadcrumb/breadcrumb.md)
[@patternfly/Button - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/button/button.md)
[@patternfly/Button - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/button/button.md)
[@patternfly/CalendarMonth - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/calendar-month/calendar-month.md)
[@patternfly/CalendarMonth - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/calendar-month/calendar-month.md)
[@patternfly/Card - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/card/card.md)
[@patternfly/Card - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/card/card.md)
[@patternfly/Checkbox - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/checkbox/checkbox.md)
[@patternfly/Checkbox - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/checkbox/checkbox.md)
[@patternfly/ChipDeprecated - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/chip-deprecated/chip-deprecated.md)
[@patternfly/ChipDeprecated - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/chip-deprecated/chip-deprecated.md)
[@patternfly/ClipboardCopy - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/clipboard-copy/clipboard-copy.md)
[@patternfly/ClipboardCopy - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/clipboard-copy/clipboard-copy.md)
[@patternfly/CodeBlock - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/code-block/code-block.md)
[@patternfly/CodeBlock - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/code-block/code-block.md)
[@patternfly/CodeEditor - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/code-editor/code-editor.md)
[@patternfly/CodeEditor - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/code-editor/code-editor.md)
[@patternfly/Content - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/content/content.md)
[@patternfly/Content - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/content/content.md)
[@patternfly/DataList - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/data-list/data-list.md)
[@patternfly/DataList - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/data-list/data-list.md)
[@patternfly/DatePicker - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/date-picker/date-picker.md)
[@patternfly/DatePicker - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/date-picker/date-picker.md)
[@patternfly/DateTimePicker - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/date-time-picker/date-time-picker.md)
[@patternfly/DateTimePicker - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/date-time-picker/date-time-picker.md)
[@patternfly/DescriptionList - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/description-list/description-list.md)
[@patternfly/DescriptionList - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/description-list/description-list.md)
[@patternfly/Divider - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/divider/divider.md)
[@patternfly/Divider - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/divider/divider.md)
[@patternfly/DragAndDrop - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/drag-and-drop/drag-and-drop.md)
[@patternfly/DragAndDrop - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/drag-and-drop/drag-and-drop.md)
[@patternfly/Drawer - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/drawer/drawer.md)
[@patternfly/Drawer - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/drawer/drawer.md)
[@patternfly/Dropdown - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/dropdown/dropdown.md)
[@patternfly/Dropdown - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/dropdown/dropdown.md)
[@patternfly/DualListSelector - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/dual-list-selector/dual-list-selector.md)
[@patternfly/DualListSelector - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/dual-list-selector/dual-list-selector.md)
[@patternfly/EmptyState - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/empty-state/empty-state.md)
[@patternfly/EmptyState - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/empty-state/empty-state.md)
[@patternfly/ExpandableSection - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/expandable-section/expandable-section.md)
[@patternfly/ExpandableSection - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/expandable-section/expandable-section.md)
[@patternfly/FileUpload - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/file-upload/file-upload.md)
[@patternfly/FileUpload - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/file-upload/file-upload.md)
[@patternfly/Form - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/form/form.md)
[@patternfly/Form - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/form/form.md)
[@patternfly/FormControl - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/form-control/form-control.md)
[@patternfly/FormControl - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/form-control/form-control.md)
[@patternfly/FormSelect - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/form-select/form-select.md)
[@patternfly/FormSelect - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/form-select/form-select.md)
[@patternfly/HelperText - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/helper-text/helper-text.md)
[@patternfly/HelperText - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/helper-text/helper-text.md)
[@patternfly/Hint - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/hint/hint.md)
[@patternfly/Hint - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/hint/hint.md)
[@patternfly/Icon - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/icon/icon.md)
[@patternfly/Icon - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/icon/icon.md)
[@patternfly/InlineEdit - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/inline-edit/inline-edit.md)
[@patternfly/InlineEdit - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/inline-edit/inline-edit.md)
[@patternfly/InputGroup - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/input-group/input-group.md)
[@patternfly/InputGroup - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/input-group/input-group.md)
[@patternfly/JumpLinks - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/jump-links/jump-links.md)
[@patternfly/JumpLinks - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/jump-links/jump-links.md)
[@patternfly/Label - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/label/label.md)
[@patternfly/Label - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/label/label.md)
[@patternfly/List - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/list/list.md)
[@patternfly/List - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/list/list.md)
[@patternfly/LoginPage - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/login-page/login-page.md)
[@patternfly/LoginPage - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/login-page/login-page.md)
[@patternfly/Masthead - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/masthead/masthead.md)
[@patternfly/Masthead - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/masthead/masthead.md)
[@patternfly/Menu - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/menu/menu.md)
[@patternfly/Menu - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/menu/menu.md)
[@patternfly/MenuToggle - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/menu-toggle/menu-toggle.md)
[@patternfly/MenuToggle - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/menu-toggle/menu-toggle.md)
[@patternfly/Modal - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/modal/modal.md)
[@patternfly/Modal - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/modal/modal.md)
[@patternfly/Navigation - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/navigation/navigation.md)
[@patternfly/Navigation - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/navigation/navigation.md)
[@patternfly/NotificationBadge - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/notification-badge/notification-badge.md)
[@patternfly/NotificationBadge - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/notification-badge/notification-badge.md)
[@patternfly/NotificationDrawer - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/notification-drawer/notification-drawer.md)
[@patternfly/NotificationDrawer - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/notification-drawer/notification-drawer.md)
[@patternfly/NumberInput - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/number-input/number-input.md)
[@patternfly/NumberInput - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/number-input/number-input.md)
[@patternfly/OverflowMenu - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/overflow-menu/overflow-menu.md)
[@patternfly/OverflowMenu - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/overflow-menu/overflow-menu.md)
[@patternfly/Page - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/page/page.md)
[@patternfly/Page - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/page/page.md)
[@patternfly/Pagination - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/pagination/pagination.md)
[@patternfly/Pagination - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/pagination/pagination.md)
[@patternfly/Panel - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/panel/panel.md)
[@patternfly/Panel - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/panel/panel.md)
[@patternfly/Popover - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/popover/popover.md)
[@patternfly/Popover - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/popover/popover.md)
[@patternfly/Progress - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/progress/progress.md)
[@patternfly/Progress - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/progress/progress.md)
[@patternfly/ProgressStepper - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/progress-stepper/progress-stepper.md)
[@patternfly/ProgressStepper - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/progress-stepper/progress-stepper.md)
[@patternfly/Radio - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/radio/radio.md)
[@patternfly/Radio - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/radio/radio.md)
[@patternfly/SearchInput - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/search-input/search-input.md)
[@patternfly/SearchInput - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/search-input/search-input.md)
[@patternfly/Select - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/select/select.md)
[@patternfly/Select - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/select/select.md)
[@patternfly/Sidebar - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/sidebar/sidebar.md)
[@patternfly/Sidebar - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/sidebar/sidebar.md)
[@patternfly/SimpleList - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/simple-list/simple-list.md)
[@patternfly/SimpleList - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/simple-list/simple-list.md)
[@patternfly/Skeleton - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/skeleton/skeleton.md)
[@patternfly/Skeleton - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/skeleton/skeleton.md)
[@patternfly/SkipToContent - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/skip-to-content/skip-to-content.md)
[@patternfly/SkipToContent - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/skip-to-content/skip-to-content.md)
[@patternfly/Slider - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/slider/slider.md)
[@patternfly/Slider - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/slider/slider.md)
[@patternfly/Spinner - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/spinner/spinner.md)
[@patternfly/Spinner - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/spinner/spinner.md)
[@patternfly/Switch - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/switch/switch.md)
[@patternfly/Switch - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/switch/switch.md)
[@patternfly/Table - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/table/table.md)
[@patternfly/Tabs - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/tabs/tabs.md)
[@patternfly/Tabs - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/tabs/tabs.md)
[@patternfly/TextArea - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/text-area/text-area.md)
[@patternfly/TextArea - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/text-area/text-area.md)
[@patternfly/TextInput - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/text-input/text-input.md)
[@patternfly/TextInput - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/text-input/text-input.md)
[@patternfly/TextInputGroup - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/text-input-group/text-input-group.md)
[@patternfly/TextInputGroup - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/text-input-group/text-input-group.md)
[@patternfly/TileDeprecated - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/tile-deprecated/tile-deprecated.md)
[@patternfly/TileDeprecated - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/tile-deprecated/tile-deprecated.md)
[@patternfly/TimePicker - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/time-picker/time-picker.md)
[@patternfly/TimePicker - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/time-picker/time-picker.md)
[@patternfly/Timestamp - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/timestamp/timestamp.md)
[@patternfly/Timestamp - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/timestamp/timestamp.md)
[@patternfly/Title - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/title/title.md)
[@patternfly/Title - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/title/title.md)
[@patternfly/ToggleGroup - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/toggle-group/toggle-group.md)
[@patternfly/ToggleGroup - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/toggle-group/toggle-group.md)
[@patternfly/Toolbar - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/toolbar/toolbar.md)
[@patternfly/Toolbar - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/toolbar/toolbar.md)
[@patternfly/Tooltip - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/tooltip/tooltip.md)
[@patternfly/Tooltip - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/tooltip/tooltip.md)
[@patternfly/TreeView - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/tree-view/tree-view.md)
[@patternfly/TreeView - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/tree-view/tree-view.md)
[@patternfly/Truncate - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/truncate/truncate.md)
[@patternfly/Truncate - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/truncate/truncate.md)
[@patternfly/Wizard - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/components/wizard/wizard.md)
[@patternfly/Wizard - Accessibility](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/accessibility/wizard/wizard.md)
            [@patternfly/Bullseye - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/layouts/bullseye.md)
[@patternfly/Flex - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/layouts/flex.md)
[@patternfly/Gallery - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/layouts/gallery.md)
[@patternfly/Grid - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/layouts/grid.md)
[@patternfly/Level - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/layouts/level.md)
[@patternfly/Split - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/layouts/split.md)
[@patternfly/Stack - Design Guidelines](https://raw.githubusercontent.com/patternfly/patternfly-org/refs/heads/main/packages/documentation-site/patternfly-docs/content/design-guidelines/layouts/stack.md)
            [@patternfly/Charts - Colors for Charts](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/victory/components/ChartTheme/examples/ChartTheme.md)
[@patternfly/Charts - Target Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/area-chart/area-chart.md)
[@patternfly/Charts - Bar Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/bar-chart/bar-chart.md)
[@patternfly/Charts - Box Plot Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/ChartBoxPlot/examples/ChartBoxPlot.md)
[@patternfly/Charts - Bullet Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/bullet-chart/bullet-chart.md)
[@patternfly/Charts - Donut Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/donut-chart/donut-chart.md)
[@patternfly/Charts - Donut Utilization Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/donut-utilization-chart/donut-utilization-chart.md)
[@patternfly/Charts - Line Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/line-chart/line-chart.md)
[@patternfly/Charts - Pie Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/pie-chart/pie-chart.md)
[@patternfly/Charts - Scatter Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/scatter-chart/scatter-chart.md)
[@patternfly/Charts - Sparkline Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/sparkline-chart/sparkline-chart.md)
[@patternfly/Charts - Stack Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/stacked-chart/stacked-chart.md)
[@patternfly/Charts - Threshold Chart](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/threshold-chart/threshold-chart.md)
[@patternfly/Charts - Legend](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/legend-chart/legend-chart.md)
[@patternfly/Charts - Tooltip](https://raw.githubusercontent.com/patternfly/patternfly-react/refs/heads/main/packages/react-charts/src/charts/tooltip-chart/tooltip-chart.md)
            [@patternfly/react-charts](/documentation/charts/README.md)
[@patternfly/react-chatbot](/documentation/chatbot/README.md)
[@patternfly/react-component-groups](/documentation/component-groups/README.md)
[@patternfly/react-components](/documentation/components/README.md)
[@patternfly/react-guidelines](/documentation/guidelines/README.md)
[@patternfly/react-resources](/documentation/resources/README.md)
[@patternfly/react-setup](/documentation/setup/README.md)
[@patternfly/react-troubleshooting](/documentation/troubleshooting/README.md)
          

        1. Pick the most suitable URL from the above list, and use that as the "urlList" argument for this tool's execution, to get the docs content. If it's just one, let it be an array with one URL.
        2. Analyze the URLs listed in the .md file
        3. Then fetch specific documentation pages relevant to the user's question with the subsequent tool call.",
        "inputSchema": {
          "urlList": ZodArray {
            "_def": {
              "description": "The list of urls to fetch the documentation from",
              "exactLength": null,
              "maxLength": null,
              "minLength": null,
              "type": ZodString {
                "_def": {
                  "checks": [],
                  "coerce": false,
                  "typeName": "ZodString",
                },
                "and": [Function],
                "array": [Function],
                "brand": [Function],
                "catch": [Function],
                "default": [Function],
                "describe": [Function],
                "isNullable": [Function],
                "isOptional": [Function],
                "nullable": [Function],
                "nullish": [Function],
                "optional": [Function],
                "or": [Function],
                "parse": [Function],
                "parseAsync": [Function],
                "pipe": [Function],
                "promise": [Function],
                "readonly": [Function],
                "refine": [Function],
                "refinement": [Function],
                "safeParse": [Function],
                "safeParseAsync": [Function],
                "spa": [Function],
                "superRefine": [Function],
                "transform": [Function],
                "~standard": {
                  "validate": [Function],
                  "vendor": "zod",
                  "version": 1,
                },
              },
              "typeName": "ZodArray",
            },
            "and": [Function],
            "array": [Function],
            "brand": [Function],
            "catch": [Function],
            "default": [Function],
            "describe": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "pipe": [Function],
            "promise": [Function],
            "readonly": [Function],
            "refine": [Function],
            "refinement": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "superRefine": [Function],
            "transform": [Function],
            "~standard": {
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
        },
      },
      [Function],
    ],
    [
      "fetchDocs",
      {
        "description": "Fetch documentation for one or more URLs extracted from previous tool calls responses. The URLs should be passed as an array in the "urlList" argument.",
        "inputSchema": {
          "urlList": ZodArray {
            "_def": {
              "description": "The list of URLs to fetch documentation from",
              "exactLength": null,
              "maxLength": null,
              "minLength": null,
              "type": ZodString {
                "_def": {
                  "checks": [],
                  "coerce": false,
                  "typeName": "ZodString",
                },
                "and": [Function],
                "array": [Function],
                "brand": [Function],
                "catch": [Function],
                "default": [Function],
                "describe": [Function],
                "isNullable": [Function],
                "isOptional": [Function],
                "nullable": [Function],
                "nullish": [Function],
                "optional": [Function],
                "or": [Function],
                "parse": [Function],
                "parseAsync": [Function],
                "pipe": [Function],
                "promise": [Function],
                "readonly": [Function],
                "refine": [Function],
                "refinement": [Function],
                "safeParse": [Function],
                "safeParseAsync": [Function],
                "spa": [Function],
                "superRefine": [Function],
                "transform": [Function],
                "~standard": {
                  "validate": [Function],
                  "vendor": "zod",
                  "version": 1,
                },
              },
              "typeName": "ZodArray",
            },
            "and": [Function],
            "array": [Function],
            "brand": [Function],
            "catch": [Function],
            "default": [Function],
            "describe": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "pipe": [Function],
            "promise": [Function],
            "readonly": [Function],
            "refine": [Function],
            "refinement": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "superRefine": [Function],
            "transform": [Function],
            "~standard": {
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
        },
      },
      [Function],
    ],
    [
      "componentSchemas",
      {
        "description": "Get JSON Schema for a PatternFly React component. Returns prop definitions, types, and validation rules. Use this for structured component metadata, not documentation.",
        "inputSchema": {
          "componentName": ZodString {
            "_def": {
              "checks": [],
              "coerce": false,
              "description": "Name of the PatternFly component (e.g., "Button", "Table")",
              "typeName": "ZodString",
            },
            "and": [Function],
            "array": [Function],
            "brand": [Function],
            "catch": [Function],
            "default": [Function],
            "describe": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "pipe": [Function],
            "promise": [Function],
            "readonly": [Function],
            "refine": [Function],
            "refinement": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "superRefine": [Function],
            "transform": [Function],
            "~standard": {
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
        },
      },
      [Function],
    ],
    [
      "getAvailableModulesTool",
      {
        "description": "Retrieves a list of available Patternfly react-core modules in the current environment.",
        "inputSchema": {},
      },
      [Function],
    ],
    [
      "getComponentSourceCode",
      {
        "description": "Retrieve a source code of a specified Patternfly react-core module in the current environment.",
        "inputSchema": {
          "componentName": ZodString {
            "_def": {
              "checks": [],
              "coerce": false,
              "description": "Name of the PatternFly component (e.g., "Button", "Table")",
              "typeName": "ZodString",
            },
            "and": [Function],
            "array": [Function],
            "brand": [Function],
            "catch": [Function],
            "default": [Function],
            "describe": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "pipe": [Function],
            "promise": [Function],
            "readonly": [Function],
            "refine": [Function],
            "refinement": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "superRefine": [Function],
            "transform": [Function],
            "~standard": {
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
        },
      },
      [Function],
    ],
  ],
}
`;
